--- a/main.tex
+++ b/main.tex
@@ -30,8 +30,8 @@
 %%%%%%%%%% Math
 \renewcommand{\text}{\textnormal}
 %\newcommand{\pr}{\mathbf{p}}
-\newcommand{\pr}{P}
-\newcommand{\p}{P}
+\newcommand{\pr}{p}
+\newcommand{\p}{p}
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\divkk}{\mathbb{K}}
 \newcommand{\entropy}{\mathbb{H}}
