--- a/intro.tex
+++ b/intro.tex
@@ -1,12 +1,27 @@
 \section{Introduction}
 \label{sec:introduction}
-In recent years, several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network (\cite{Liben-Nowell07, HassanZaki11}). Among such models, the class of probabilistic, generative models has received much attention as such models can be used to both generate artificial networks and infer new links from existing ones. Two main models have been proposed and studied in this class: the latent feature model (\cite{BMF}) and its non-parametric extension (\cite{ILFRM}), and the mixed-membership stochastic block model (\cite{MMSB}) and its non parametric extensions (\cite{iMMSB,diMMSB}). In this paper, we focus on this two model, and study some of its properties related to link prediction in social networks. 
+In recent years, several powerful relational learning models have been proposed to solve the problem commonly referred to as \textit{link prediction} that consists in predicting the likelihood of a future association between two nodes in a network (\cite{Liben-Nowell07, HassanZaki11}). Among such models, the class of probabilistic, generative models has received much attention as such models can be used to both generate artificial networks and infer new links from existing ones. Two main class of models have been proposed and studied in the literature: The feature based model and the class based (or cluster based) model: Two seminal work within those classes of model are respectively the latent feature model (\cite{BMF}) and its non-parametric extension (\cite{ILFRM}), and the mixed-membership stochastic block model (\cite{MMSB}) and its non parametric extensions (\cite{iMMSB,diMMSB}). In this paper, we focus on this two model, and study some of its properties related to link prediction in social networks. 
 
-Indeed, although drawn from a wide range of domains, most real world social networks exhibit common properties, such as the \textit{homophily}, \textit{preferential attachement} and \textit{small world} effects (\cite{Newman2010, Barabasi2003}). 
+Indeed, although drawn from a wide range of domains, most real world social networks exhibit common properties, such as the \textit{homophily} and \textit{preferential attachement} and \textit{small world} effects (\cite{Newman2010, Barabasi2003}). 
 
 
-A natural question that arises is thus whether or not models as MMSB and ILFM comply with such properties. MMSB is typically learned from observed data that describe a set of nodes and links between them; from the model learned, one can then predict the probability that a new link will be drawn between two given nodes of the network. The first question we address is thus the following one: \textit{Do  mixed-membership stochastic block models learned from given observations comply with the homophily, preferential attachment and small world effects?}.
+A natural question that arises is thus whether or not models as MMSB and ILFM comply with such properties. Link prediction model, typically learned or given, describe a set of nodes and links between them; Such data defines a random structure $Y$. Given that, we learn a model parameters $\hat \theta$, such that one can then predict the probability that a new link will be drawn between two given nodes of the network by studying the following quantity:
+\begin{equation}
+\p(y | \hat \theta)
+\end{equation}
+This quantity is called a predictive likelihood.
 
-A second possible use of bayesian models is as a pure generative model to generate artificial networks. In this setting, and as we will see below, the notion of homophily does not make sense as there is no information associated with edges. The question we ask ourselves in this setting is thus: \textit{Do mixed-membership stochastic block models comply with the preferential attachment and small world effects?}. \textcolor{red}{Speech to adapt/CHANGE to incorporate the homophyly. not Small world, and a word about sparsity and class dynamics}
 
-The remainder of the paper is organized as follows. ???
+A question we ask in this setting is: \textit{Do link prediction models learned can generate networks with the homophily and preferential attachment}.
+
+A second possible use of Bayesian models is as a pure generative model to generate artificial networks. In this setting, we study models properties based on their expectation over their random parameters, defined as follows:
+
+\begin{equation}
+\p(y) = \int_{\theta} \p(y,\theta) d\theta
+\end{equation}
+This quantity is know as the evidence for the data.
+
+The question we ask ourselves in this setting is thus: \textit{Do link prediction models comply with the homophily preferential attachment effects}.
+
+
+The remainder of the paper is organized as follows. In the second section we set up the probabilistic context of our analysis, Then we present two general calss of models in this settings know as class based models and feature based models.
